--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-plugin-import-map",
+  "name": "@foony/vite-plugin-import-map",
   "version": "1.0.0",
   "description": "Vite plugin that generates import maps to prevent cascading hash changes. Created by foony.com",
   "type": "module",
@@ -35,6 +35,9 @@
     "url": "https://foony.com"
   },
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Foony-Limited/vite-plugin-import-map.git"
